[package]
name = "inx_video_util"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
clipboard = "0.5.0"
eframe = { version = "0.29.1", default-features = false, features = ["glow", "default_fonts"] }
egui-video = "0.9.0"
hex = "0.4.3"
percent-encoding = "2.3.2"
reqwest = { version = "0.12.24", features = ["blocking", "multipart"] }
rfd = "0.16.0"
sha2 = "0.10.9"
